# chat-analytics-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  GUIA_SETUP_CICD.md  RAILWAY.md  README.md  SEEDS_RAILWAY.md  SETUP.md  docker-compose.yml  entrypoint.py  pyproject.toml  render.yaml  requirements.txt  start.sh
.github/: RAILWAY_SETUP.md
.github/workflows/: ci.yml  deploy.yml
app/: config.py  main.py
app/auth/: __init__.py  dependencies.py  jwt_handler.py  router.py  schemas.py  service.py
app/chat/: __init__.py  router.py  schemas.py  service.py
app/chat/llm/: __init__.py  client.py  gemini_client.py
app/chat/nl2sql/: __init__.py  detector.py  exceptions.py  intent_parser.py  prompts.py  query_executor.py  schema_discovery.py  schemas.py  sql_generator.py
app/data/: __init__.py  router.py  schemas.py  service.py
app/db/: __init__.py  database.py  models.py  seed.py
app/reports/: __init__.py  charts.py  generator.py  router.py  schemas.py  service.py
app/scripts/: seed_equipment.sql  seed_tickets.py
docs/: 01_ESTRUCTURA.md  02_SCHEMAS.md  03_PROMPTS.md  04_DETECTOR.md  05_SCHEMA_DISCOVERY.md  06_PARSER_GENERATOR.md  07_EXECUTOR.md  08_INTEGRACION.md  09_MODELOS_SEED.md  10_TESTS.md  API.md  API_FRONTEND.md  ESTADO_PROYECTO.md  NL2SQL_GUIA.md
tests/: conftest.py  test_auth.py  test_chat.py  test_data.py  test_nl2sql.py  test_output.txt  test_output_2.txt  test_reports.py  test_services.py
